Doc/Samples/New/Neg/Basic/NegMaxQSize.p
main machine Foo assume -10 {
    start state foo { }
}
